# kiwix-xulrunner

./: .gitignore  AUTHORS  CHANGELOG  COMPILE  Makefile  Makefile.am  Makefile.am.alt  Makefile.am.orig  Makefile.in  OVERVIEW  README  README.md  autogen.sh  build-kiwix-release.sh  build-kiwix-sugar.sh  child-process.cpp  configure.ac  configure_alt.ac  configure_orig.ac  ftp_pass.py  ftp_upload.py  install.sh  mem_usage.sh  moulin.maker.rb  parent-process.cpp  sign-osx-build.sh  sign_osx_build
components/xapianAccessor/: IXapianAccessor.idl  Makefile.in  configure.ac  splitString.cpp  xapianAccessor.cpp
components/xapianAccessor/win/: xapianAccessor.vcproj  xpidl.sh
components/zenocomponent/: IZeno.idl  Makefile  Makefile.in  Makefile.real.in  autogen.sh  configure  configure.ac  zenocomponent.cpp
components/zimAccessor/: IZenoAccessor.idl  IZimAccessor.idl  Makefile.in  configure.ac  zimAccessor.cpp
components/zimAccessor/win/: xpidl.sh  zimAccessor.vcproj
desktop/: Makefile.am  Makefile.am.alt  kiwix.applications  kiwix.desktop  kiwix.xml  kiwix.xpm
desktop/16x16/: Makefile.am
desktop/22x22/: Makefile.am
desktop/24x24/: Makefile.am
desktop/256x256/: Makefile.am
desktop/32x32/: Makefile.am
desktop/48x48/: Makefile.am
desktop/8x8/: Makefile.am
indexer/kiwix/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  configure.in  mkinstalldirs
indexer/kiwix/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
indexer/kiwix/src/: Makefile  Makefile.am  Makefile.in  common.h  dirparser.c  dirparser.h  filenameindex.c  filenameindex.h  htmlbuffer.c  htmlbuffer.h  main.c  utils.c  utils.h  wordindex.c  wordindex.h
indexer/kiwix/src/.deps/: GeoBase.Po  GeoComment.Po  GeoVector.Po  MyArchive.Po  Plane.Po  UndoBuffer.Po  binreloc.Po  diaBase.Po  dirparser.P  dirparser.Po  euclideConf.Po  euclideDocument.Po  euclideMain.Po  euclideView.Po  filenameindex.P  filenameindex.Po  htmlbuffer.P  htmlbuffer.Po  main.P  main.Po  mlstring.Po  utils.P  utils.Po  wordindex.P  wordindex.Po
indexer/kiwix/src/backend/: backend.c  backend.h  html.c  html.h  zeno.cpp  zeno.h
kiwix/: AUTHORS  CHANGELOG  COMPILE  Makefile.am  Makefile.am.alt  Makefile.am.orig  README  application.ini  chrome.manifest  kiwix  kiwix-compact  kiwix-compact.sh  kiwix-debug.bat  kiwix-set-fileassoc.bat  kiwix-wine  kiwix.sh
kiwix/chrome/: Makefile.am  Makefile.am.alt  Makefile.am.orig  chrome.manifest  chrome.manifest.dev  chrome.manifest.prod
kiwix/chrome/content/interfacewiki/: corpus.xul  corpusedit.xul  default.css  interfacewiki.xul
kiwix/chrome/content/main/: about.xul  main.xul  preferences.xul  server.xul
kiwix/chrome/icons/default/: main.icns  main.xpm  mybrowser.xpm  zim.icns
kiwix/chrome/locale/branding/: brand.dtd  brand.properties  credits.html
kiwix/chrome/modules/: env.jsm  libcontentManager.jsm  library.jsm  libzimAccessor.jsm  os.jsm  settings.jsm
kiwix/chrome/modules/ctype/: zimAccessor.jsm
kiwix/chrome/skin/default/: main.css  (+3 more)
kiwix/chrome/static/: results.tmpl
kiwix/components/: IZeno.xpt  Makefile.am  Makefile.am.alt  commandLineHandler.js  contentManager.xpt  searchProtocol.js  suggest.js  xapianAccessor.xpt  zenoAccessor.xpt  zenoProtocol.js  zimAccessor.xpt  zimProtocol.js  zimXapianIndexer.xpt
kiwix/defaults/: Makefile.am  Makefile.am.alt
kiwix/defaults/preferences/: mybrowser-prefs.js  preferences.js
src/: Makefile.am
src/common/: resourceTools.h
src/common/kiwix/: indexer.cpp  indexer.h  xapianIndexer.cpp
src/components/: Makefile.am  Makefile.am.alt  Makefile.am.orig  check.sh  components.list
src/components/cluceneAccessor/: ICluceneAccessor.idl  ICluceneAccessor_gecko_old_int_type.idl  Makefile.am  Makefile.am.alt  Makefile.am.orig  Makefile.msvc  Makefile.mvsc  cluceneAccessor.cpp
src/components/contentManager/: IContentManager.idl  IContentManager_gecko_old_int_type.idl  IContentManager_gecko_v1.idl  Makefile.am  Makefile.am.alt  Makefile.am.orig  Makefile.msvc  Makefile.mvsc  contentManager.cpp
src/components/serverManager/: IServerManager.idl  Makefile.am  Makefile.am.alt  Makefile.am.orig  Makefile.msvc  Makefile.mvsc  serverManager.cpp
src/components/sugarBridge/: ISugarBridge.idl  sugar_bridge.py
src/components/xapianAccessor/: IXapianAccessor.idl  IXapianAccessor_gecko_old_int_type.idl  Makefile.am  Makefile.am.alt  Makefile.am.orig  Makefile.msvc  Makefile.mvsc  splitString.h  xapianAccessor.cpp
src/components/zimAccessor/: IZimAccessor.idl  IZimAccessor_gecko_old_int_type.idl  Makefile.am  Makefile.am.alt  Makefile.am.orig  Makefile.msvc  Makefile.mvsc  zimAccessor.cpp
src/components/zimCluceneIndexer/: IZimCluceneIndexer.idl  Makefile.am  Makefile.am.alt  Makefile.am.orig  Makefile.msvc  Makefile.mvsc  zimCluceneIndexer.cpp
src/components/zimIndexer/: IZimIndexer.idl  Makefile.am  Makefile.mvsc  zimIndexer.cpp
src/components/zimXapianIndexer/: IZimXapianIndexer.idl  Makefile.am  Makefile.am.alt  Makefile.am.orig  Makefile.msvc  Makefile.mvsc  zimXapianIndexer.cpp
src/ctpp2/src/: Makefile.am
src/ctype/zimAccessor/: Makefile.am
src/dependences/: Makefile.am
src/dependencies/: Makefile.am
src/dependencies/patches/: CTPP2SourceLoader.hpp.patch  CTPP2SysHeaders.h  Makefile.zimlib.msvc  lzma-base-header-enum.patch  xapian-core-1.2.3-cpp11.patch  zimlib-win32-headers-instead-of-unix.patch  zimlib_config.h
src/dependencies/tools/: unpkg.py
src/indexer/: Makefile.am  Makefile.msvc  kiwix-index.cpp
src/installer/: Makefile.am  Makefile.msvc  kiwix-install.cpp
src/launcher/: Makefile.am  Makefile.msvc  kiwix-launcher.cpp
src/man/: Makefile.am
src/man/fr/: Makefile.am
src/manager/: Makefile.am  Makefile.msvc  kiwix-manage.cpp
src/pugixml/: Makefile.am
src/reader/: Makefile.am  kiwix-read.cpp
src/searcher/: Makefile.am  kiwix-search.cpp
src/server/: Makefile.am  Makefile.msvc  kiwix-serve.cpp
src/sugar/: setup.py
src/sugar/activity/: activity.info
src/zimlib/: Makefile.am
src/zimlib/src/: Makefile.am  Makefile.msvc
(+1097 files in other folders)
